[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://client/scenes/EscMenu.gd" id="1"]

[node name="EscMenu" type="CanvasLayer"]
layer = 200
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0

[node name="Backdrop" type="ColorRect" parent="Root"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)
mouse_filter = 0

[node name="MenuPanel" type="PanelContainer" parent="Root"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -170.0
offset_right = 220.0
offset_bottom = 170.0
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="Root/MenuPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = -12.0

[node name="Title" type="Label" parent="Root/MenuPanel/VBox"]
text = "Menu"
horizontal_alignment = 1

[node name="Bindings" type="RichTextLabel" parent="Root/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 200)
fit_content = true
bbcode_enabled = false
scroll_active = false

[node name="SaveReplay" type="Button" parent="Root/MenuPanel/VBox"]
text = "Save Bug Report"

[node name="Resume" type="Button" parent="Root/MenuPanel/VBox"]
text = "Resume"

[connection signal="pressed" from="Root/MenuPanel/VBox/SaveReplay" to="." method="_on_save_replay_pressed"]
[connection signal="pressed" from="Root/MenuPanel/VBox/Resume" to="." method="_on_resume_pressed"]
